<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_coffee_type"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:background="@color/brown"
        android:gravity="center"
        android:text="@string/coffee_type"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/image_clock"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_clock"
        app:layout_constraintEnd_toStartOf="@id/image_like"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_coffee_type"
        app:tint="#855E53" />

    <ImageView
        android:id="@+id/image_like"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_clock"
        app:layout_constraintTop_toTopOf="@id/image_clock"
        app:tint="#855E53" />

    <TextView
        android:id="@+id/text_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparation_time"
        app:layout_constraintEnd_toEndOf="@id/image_clock"
        app:layout_constraintStart_toStartOf="@id/image_clock"
        app:layout_constraintTop_toBottomOf="@id/image_clock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        app:layout_constraintEnd_toEndOf="@id/image_like"
        app:layout_constraintStart_toStartOf="@id/image_like"
        app:layout_constraintTop_toBottomOf="@id/image_like" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_minutes" />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/phrase"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <TextView
        android:id="@+id/text_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/recipe"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_phrase" />

    <ImageView
        android:id="@+id/image_arrow_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_recipe"
        app:tint="#855E53" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expresso"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/image_arrow_1"
        app:layout_constraintTop_toTopOf="@id/image_arrow_1" />

    <ImageView
        android:id="@+id/image_arrow_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_1"
        app:tint="#855E53" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/image_arrow_2"
        app:layout_constraintTop_toTopOf="@id/image_arrow_2" />

    <ImageView
        android:id="@+id/image_arrow_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_2"
        app:tint="#855E53" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/image_arrow_3"
        app:layout_constraintTop_toTopOf="@id/image_arrow_3" />


</androidx.constraintlayout.widget.ConstraintLayout>